# MTRN4230

./: Project Management Plan - H12A_MomsFriendlyRobotCompany.md  README.md  Requirements report - H12A_MomsFriendlyRobotCompany.md
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: camera_package.pc  lab09_gazebo.pc  nodes.pc  ur5e_epick_moveit_config.pc  ur_description.pc  ur_kinematics.pc
devel/lib/python2.7/dist-packages/ur_kinematics/: __init__.py
devel/share/camera_package/cmake/: camera_packageConfig.cmake
devel/share/lab09_gazebo/cmake/: lab09_gazeboConfig.cmake
devel/share/nodes/cmake/: nodesConfig.cmake
devel/share/ur5e_epick_moveit_config/cmake/: ur5e_epick_moveit_configConfig.cmake
devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
devel/share/ur_kinematics/cmake/: ur_kinematicsConfig.cmake
src/: README.md
src/lab09_gazebo/: CMakeLists.txt
src/lab09_gazebo/models/char_blocks/Char_A/: cube_A.config  cube_A.sdf  letter_A.STL  letter_A.dae
src/lab09_gazebo/models/char_blocks/Char_B/: cube_B.config  cube_B.sdf  letter_B.STL  letter_B.dae
src/lab09_gazebo/models/char_blocks/Char_C/: cube_C.config  cube_C.sdf  letter_C.STL  letter_C.dae
src/lab09_gazebo/models/char_blocks/Char_D/: cube_D.config  cube_D.sdf  letter_D.STL  letter_D.dae
src/lab09_gazebo/models/char_blocks/Char_E/: cube_E.config  cube_E.sdf  letter_E.STL  letter_E.dae
src/lab09_gazebo/models/char_blocks/Char_F/: cube_F.config  cube_F.sdf  letter_F.STL  letter_F.dae
src/lab09_gazebo/models/char_blocks/Char_G/: cube_G.config  cube_G.sdf  letter_G.STL  letter_G.dae
src/lab09_gazebo/models/char_blocks/Char_H/: cube_H.config  cube_H.sdf  letter_H.STL  letter_H.dae
src/lab09_gazebo/models/char_blocks/Char_I/: cube_I.config  cube_I.sdf  letter_I.STL  letter_I.dae
src/lab09_gazebo/models/char_blocks/Char_J/: cube_J.config  cube_J.sdf  letter_J.STL  letter_J.dae
src/lab09_gazebo/models/char_blocks/Char_K/: cube_K.config  cube_K.sdf  letter_K.STL  letter_K.dae
src/lab09_gazebo/models/char_blocks/Char_L/: cube_L.config  cube_L.sdf  letter_L.STL  letter_L.dae
src/lab09_gazebo/models/char_blocks/Char_M/: cube_M.config  cube_M.sdf  letter_M.STL  letter_M.dae
src/lab09_gazebo/models/char_blocks/Char_N/: cube_N.config  cube_N.sdf  letter_N.STL  letter_N.dae
src/lab09_gazebo/models/char_blocks/Char_O/: cube_O.config  cube_O.sdf  letter_O.STL  letter_O.dae
src/lab09_gazebo/models/char_blocks/Char_P/: cube_P.config  cube_P.sdf  letter_P.STL  letter_P.dae
src/lab09_gazebo/models/char_blocks/Char_Q/: cube_Q.config  cube_Q.sdf  letter_Q.STL  letter_Q.dae
src/lab09_gazebo/models/char_blocks/Char_R/: cube_R.config  cube_R.sdf  letter_R.STL  letter_R.dae
src/lab09_gazebo/models/char_blocks/Char_S/: cube_S.config  cube_S.sdf  letter_S.STL  letter_S.dae
src/lab09_gazebo/models/char_blocks/Char_T/: cube_T.config  cube_T.sdf  letter_T.STL  letter_T.dae
src/lab09_gazebo/models/char_blocks/Char_U/: cube_U.config  cube_U.sdf  letter_U.STL  letter_U.dae
src/lab09_gazebo/models/char_blocks/Char_V/: cube_V.config  cube_V.sdf  letter_V.STL  letter_V.dae
src/lab09_gazebo/models/char_blocks/Char_W/: cube_W.config  cube_W.sdf  letter_W.STL  letter_W.dae
src/lab09_gazebo/models/char_blocks/Char_X/: cube_X.config  cube_X.sdf  letter_X.STL  letter_X.dae
src/lab09_gazebo/models/char_blocks/Char_Y/: cube_Y.config  cube_Y.sdf  letter_Y.STL  letter_Y.dae
src/lab09_gazebo/models/char_blocks/Char_Z/: cube_Z.config  cube_Z.sdf  letter_Z.STL  letter_Z.dae
src/lab09_gazebo/models/cylinder/: cylinder.STL
src/lab09_gazebo/models/cylinder/cyan/: cylinder_cyan.config  cylinder_cyan.dae  cylinder_cyan.sdf  cylinder_cyan_v2.dae
src/lab09_gazebo/models/cylinder/purple/: cylinder_purple.sdf
src/lab09_gazebo/models/cylinder/purple_1/: cylinder_purple.config  cylinder_purple.dae  cylinder_purple.sdf
src/lab09_gazebo/models/cylinder/purple_2/: cylinder_purple.config  cylinder_purple.sdf
src/lab09_gazebo/models/cylinder/purple_3/: cylinder_purple.config  cylinder_purple.sdf  cylinder_purple_v2.dae
src/lab09_gazebo/urdf/: camera_description.urdf.xacro
src/nodes/: CMakeLists.txt  package.xml
src/nodes/launch/: demo_IO.launch  demo_character_identification.launch  integrated.launch  test_character_detection.launch  test_controller.launch  test_movement.launch  test_movement_2.launch
src/nodes/src/: character_detection.cpp  character_recognition.cpp  controller.cpp  demo_IO.cpp  environment.cpp  image_listener.cpp  independent_movement.cpp  movement.cpp  positions_listener.cpp  test_controller_camera.cpp  test_controller_environment.cpp  test_controller_movement.cpp  test_env.cpp  test_movement_2.cpp  user_IO.cpp
src/ur5e_epick_moveit_config/config/: ur5e_epick.srdf
